# FourierEpicycles

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/: art.cpp  art.h  complex.h  fft.cpp  fft.h  main.cpp  transform.cpp  transform.h
